# platform.upstream.libXcomposite

./: .gitignore  COPYING  ChangeLog  Makefile.am  configure.ac  libXcomposite-0.4.3.tar.bz2.delta  libXcomposite-0.4.3.tar.bz2.id  xcomposite.pc.in
include/X11/extensions/: Xcomposite.h
man/: .gitignore  Makefile.am  Xcomposite.xml
packaging/: libXcomposite.changes  libXcomposite.spec
src/: Makefile.am  Xcomposite.c  xcompositeint.h
